FIX: add transition for visibility of dropdown. In some cases, there is a gap between the 'available actions' button and the contained buttons. Since the contained buttons are hidden when the 'available actions' button is no longer hovered, the buttons were virtually unreachable without a smooth transition

--- a/css/style.css
+++ b/css/style.css
@@ -241,11 +241,14 @@ div.fiche.--upbuttons-style-override div.statusref {
 }
 
 #upbuttons-nav ul {
-	display: none;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0.2s, opacity 0.2s linear;
 }
 
 #upbuttons-nav:hover ul {
-	display: block;
+	visibility: visible;
+	opacity: 1;
 }
 
 ul.upbuttons-list-of-action-buttons {
